[tool.poetry]
name = "mistral-pdf"
version = "0.1.0"
description = ""
authors = ["IsmaelMekene <ismaelmekene@gmail.com>"]
readme = "README.md"
packages = [{ include = "mistral_pdf" }]

[tool.poetry.dependencies]
python = "^3.8"
torch = "=2.0.0"
farm-haystack = { extras = ["weaviate"], version = "^1.21.2" }
canals = "^0.8.1"
pymupdf = "^1.23.5"
pypdf2 = "^3.0.1"
nltk = "^3.8.1"
sentence-transformers = "^2.2.2"
llama-cpp-python = "^0.2.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15"
pytest = "^7.0"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"
types-python-dateutil = "^2.8.18"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "^3.8"
exclude = "tests/"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -q -vv --cov=mistral_pdf --cov-report=term"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["**/tests/test_*.py"]
fail_under = 50
